--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,15 @@
-./pdf_files/
-./export/
-./images/
-./logs/
-./cache/
-./temp/
-./data/
-./__pycache__/
-./venv/
-./node_modules/
-./dist/
-./build/
-./docs/
-./apikey.ini
+pdf_files/
+export/
+images/
+logs/
+cache/
+temp/
+data/
+
+__pycache__/
+venv/
+node_modules/
+dist/
+build/
+docs/
+apikey.ini
